worked on client index

--- a/Smart City/public/css/style.css
+++ b/Smart City/public/css/style.css
@@ -1965,11 +1965,13 @@ div[data-role="editor-toolbar"] {
 
 .blue-bg {
 
-  color : #fff;
+  /*color : #fff;*/
+    color:black;
 
-  background : #57889c;
+  /*background : #57889c;*/
 
-  background-color : #57889c;
+  /*background-color : #57889c;*/
+    background-color: #A3F90A;
 
 }
 
