--- a/Smart City/views/ClientIndex.ejs
+++ b/Smart City/views/ClientIndex.ejs
@@ -197,7 +197,19 @@
                 </div>
 
 
-                <div class="col-md-5" style="background-color: white;height: 700px;margin-left: 10px;">
+                <div class="col-md-5" style="background-color: white;margin-left: 10px;">
+                    <h1>Welcome to <strong>Villa Torino</strong> Community</h1>
+                    <img src="img/Villa.jpg" style="width: 100%; height: 350px;">
+                    <p>Our central downtown San Jose location, exquisite apartment features, spacious floor plans and luxurious resident amenities are just part of the reason living at Villa Torino is so desirable.
+                        Villa Torino boasts 1, 2, and 3 bedroom floor plans with large living areas perfect for entertaining, generous bedrooms for the perfect at home feel, plush carpeting throughout, and tiled
+                        kitchens and baths. Select units feature separate dining areas, generously sized kitchens with modern appliances and cabinetry. When you step outside your front door, you will be able to
+                        take advantage of various community amenities suited to a relaxing lifestyle. Take a dip in our resort-style pool complete with spa, get in a workout at our fitness center, or just spend some time relaxing in the clubhouse.
+                        Great urban adventures are just a heartbeat from your front door in San Jose and with access to the Light Rail. Meet your friends at San Pedro Square for a drink and dinner or grab some fresh produce to create
+                        your own dinner party at the weekly Farmers Market. Catch a show at the Center for the Performing Arts, cheer for the Sharks at SAP Center, and visit the Tech Museum. If you prefer to stay outdoors, walk or bike at
+                        Guadalupe River Park, a place where you can enjoy northern California’s fantastic scenery.
+                        Your life at Villa Torino is in the center of it all so come find your perfect fit by scheduling a tour today!</p>
+
+
                 </div>
                 <div class="col-md-3" style="background-color: white;height: 700px;margin-left: 10px;padding-left: 50px;">
                     <h1>Report a new crime </h1>
@@ -291,7 +303,7 @@
                             <p>{{service.title}}</p>
                         </div>
                         <div class="modal-body col-md-2" >
-                            <button type="button" class="btn btn-danger" data-dismiss="modal" >Subscribe</button>
+                            <button type="button" class="btn btn-danger" ng-hide="true" data-dismiss="modal" >Subscribe</button>
                         </div>
                         <div class="modal-body col-md-1" >
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Unsubscribe</button>
