Adding Amits files

--- a/Smart City/views/ConnectCluster.ejs
+++ b/Smart City/views/ConnectCluster.ejs
@@ -34,7 +34,7 @@
             <div class="input-group">
                 <!--<span class="input-group-addon"><i class="icon_profile"></i></span>-->
                 <!--<input type="text" class="form-control" placeholder="Username" autofocus>-->
-                <select class="form-control" ng-model="coomunityName" style="width: 300px">
+                <select class="form-control" ng-model="communityName" style="width: 300px">
                     <option ng-repeat="community in communities" value="{{community.name}}">{{community.name}}</option>
                 </select>
             </div>
