--- a/Smart City/views/login.ejs
+++ b/Smart City/views/login.ejs
@@ -36,9 +36,9 @@
     <form class="login-form">
         <div class="login-wrap">
             <p class="login-img"><i class="icon_lock_alt"></i></p>
-            <div class="input-group">
+            <div class="input-group" >
                 <span class="input-group-addon"><i class="icon_profile"></i></span>
-                <input type="text" class="form-control" placeholder="Username" autofocus>
+                <input type="text" ng-model="user" class="form-control" placeholder="Username" autofocus>
             </div>
             <div class="input-group">
                 <span class="input-group-addon"><i class="icon_key_alt"></i></span>
