--- a/Smart City/views/ClientIndex.ejs
+++ b/Smart City/views/ClientIndex.ejs
@@ -358,7 +358,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" >Add Smart Node</h4>
+                    <h4 class="modal-title" >Manage Services</h4>
                 </div>
 
                 <div class="row" ng-repeat="service in Services" >
@@ -366,10 +366,10 @@
                         <p>{{service.title}}</p>
                     </div>
                     <div class="modal-body col-md-2" >
-                        <button type="button" class="btn btn-danger" ng-hide="true" data-dismiss="modal" >Subscribe</button>
+                        <button  type="button" class="btn btn-danger" ng-click="subscribe(service.title)" ng-hide="Subscribe" data-dismiss="modal" >Subscribe</button>
                     </div>
                     <div class="modal-body col-md-1" >
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Unsubscribe</button>
+                        <button type="button" class="btn btn-danger" ng-click="unsubscribe(service.title)" ng-hide="Unsubscribe"  data-dismiss="modal">Unsubscribe</button>
                     </div>
                 </div>
 
