--- a/Smart City/views/ClientIndex.ejs
+++ b/Smart City/views/ClientIndex.ejs
@@ -39,6 +39,18 @@
     <script src="angular/ClientController.js"></script>
 
 
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-98696696-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+
+
     <!-- =======================================================
         Theme Name: NiceAdmin
         Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
@@ -58,7 +70,7 @@
         </div>
 
         <!--logo start-->
-        <a href="index.html" class="logo">Welcome <span class="lite">Client Name Here</span></a>
+        <a href="index.html" class="logo">Welcome <span class="lite">{{UserValue}}</span></a>
         <!--logo end-->
 
         <div class="nav search-row" id="top_menu">
@@ -91,7 +103,7 @@
                         </li>
                         <li  ng-repeat="announcement in announcements" >
                             <a href="#">
-                                <span class="photo"><img alt="avatar" src="./img/amitpandey.jpg"></span>
+                                <span class="photo"><img alt="avatar" src="./img/avatar.png"></span>
                                 <span class="subject">
                                     <span class="from">Admin</span>
                                     <span class="time">{{announcement.date}}</span>
@@ -105,9 +117,9 @@
                 <li class="dropdown">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="img/amitpandey.jpg">
+                                <img alt="" src="img/avatar.png">
                             </span>
-                        <span class="username">Amit Pandey</span>
+                        <span class="username">{{UserValue}}</span>
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu extended logout">
