--- a/Smart City/views/ClientIndex.ejs
+++ b/Smart City/views/ClientIndex.ejs
@@ -39,16 +39,16 @@
     <script src="angular/ClientController.js"></script>
 
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <!--<script>-->
+        <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
+                <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
+            <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
+        <!--})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');-->
 
-        ga('create', 'UA-98696696-1', 'auto');
-        ga('send', 'pageview');
+        <!--ga('create', 'UA-98696696-1', 'auto');-->
+        <!--ga('send', 'pageview');-->
 
-    </script>
+    <!--</script>-->
 
 
     <!-- =======================================================
@@ -377,9 +377,9 @@
                     <div class="modal-body col-md-6" style="margin-left: 20px;">
                         <p>{{service.title}}</p>
                     </div>
-                    <div class="modal-body col-md-2" >
-                        <button  type="button" class="btn btn-danger" ng-click="subscribe(service.title)" ng-hide="Subscribe" data-dismiss="modal" >Subscribe</button>
-                    </div>
+                    <!--<div class="modal-body col-md-2" >-->
+                        <!--<button  type="button" class="btn btn-danger" ng-click="subscribe(service.title)" ng-hide="Subscribe" data-dismiss="modal" >Subscribe</button>-->
+                    <!--</div>-->
                     <div class="modal-body col-md-1" >
                         <button type="button" class="btn btn-danger" ng-click="unsubscribe(service.title)" ng-hide="Unsubscribe"  data-dismiss="modal">Unsubscribe</button>
                     </div>
