--- a/Smart City/views/index.ejs
+++ b/Smart City/views/index.ejs
@@ -271,9 +271,9 @@
         <li class="dropdown">
           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="img/amitpandey.jpg">
+                                <img alt="" src="img/avatar.png">
                             </span>
-            <span class="username">Amit Pandey</span>
+            <span class="username">Admin</span>
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu extended logout">
